<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_game"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="15dp"
    android:minHeight="100dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_goneMarginTop="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvGameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/gameTitle"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGamePlatformText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxHeight="200dp"
            android:paddingHorizontal="10dp"
            android:text="@string/platform"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvGameTitle" />

        <TextView
            android:id="@+id/tvGameReleaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:maxHeight="200dp"
            android:paddingHorizontal="10dp"
            android:text="@string/release"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvGameTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
